<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">
<include
    layout="@layout/nav_header_main"/>

    <TextView
        android:padding="6dp"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"/>

    <TextView
        android:padding="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"/>


    <RelativeLayout
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:id="@+id/banner_layout"

        >
        <com.google.android.gms.ads.AdView
            android:id="@+id/first_ad_view"
            android:layout_margin="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
        >
        <com.google.android.gms.ads.AdView
            android:id="@+id/second_ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_below="@id/first_ad_view"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

    </RelativeLayout>






</LinearLayout>