<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.Innovvapp.anytimequotes.Activities.FullscreenPhotoActivity"


    >


    <com.Innovvapp.anytimequotes.Utils.SquareImage
        android:id="@+id/activity_full_screen_photo_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scaleType="centerCrop"


        tools:src= "@tools:sample/backgrounds/scenic"
        />

    <TextView
        android:id="@+id/item_fullscreen_quote_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_photo_photo"
        android:layout_alignTop="@+id/item_photo_photo"
        android:layout_alignRight="@+id/item_photo_photo"
        android:layout_alignBottom="@+id/item_photo_photo"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:textSize="25sp"
        tools:text="Hello Android Studio"
        android:textColor="@color/white"
        android:textAppearance="@style/Base.V7.Theme.AppCompat.Light"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_color"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:minHeight="50dp"

        android:padding="8dp">
        <TextView
            android:id="@+id/activity_fullscreaanhyphoen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/fullscreen_author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="Beautifully Mountain"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>
        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/activity_fullscreen_photo_fab_menu"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            app:menu_icon="@drawable/ic_expand_more"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:menu_colorNormal="@color/colorAccent"
            app:menu_colorPressed="@color/colorAccent"
            android:layout_margin="8dp">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/activity_fullscreen_photo_fab_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_size="mini"
                android:src="@drawable/ic_fullscreen_save"
                app:fab_colorNormal="@color/yellow"
                app:fab_label="@string/save_title"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/activity_fullscreen_photo_fab_set_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_size="mini"
                android:src="@drawable/ic_fullscreen_share"
                app:fab_colorNormal="@color/yellow"
                app:fab_label="@string/share_title"
                />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/activity_fullscreen_photo_fab_set_wallpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_size="mini"
                android:src="@drawable/ic_action_wallpaper"
                app:fab_colorNormal="@color/yellow"
                app:fab_label="@string/wall_title"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/activity_fullscreen_photo_fab_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_size="mini"
                android:src="@drawable/ic_action_delete"
                app:fab_colorNormal="@color/yellow"
                app:fab_label="@string/delete"
                android:visibility="gone"
                />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/activity_fullscreen_photo_fab_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_size="mini"
                android:src="@drawable/ic_action_copy"
                app:fab_colorNormal="@color/yellow"
                app:fab_label="@string/copy_quote"

                />
        </com.github.clans.fab.FloatingActionMenu>






</RelativeLayout>
